# lcy-lib

./: .gitignore  CMakeLists.txt  Cargo.toml  justfile  test.cpp
benches/: criterion.rs  iai.rs
src/: lib.rs
