[package]
name = "lcy_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]
name="lcy_lib"
path="src/lib.rs"

[dependencies]
nalgebra = "0.31.0"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false
